--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -1,71 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RoomListActivity"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:id="@+id/dl_roomList">
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/et_restaurant"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.9"
-            android:hint="음식점을 입력하세요." />
-
-        <Button
-            android:id="@+id/btn_enter"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:text="입력" />
-
-    </LinearLayout>
-
-    <com.naver.maps.map.MapView
-        android:id="@+id/mv_naver"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/mv_naver"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+        <include
+            layout="@layout/toolbar"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/PColor2">
+            <ImageButton
+                android:id="@+id/Ib_searchopen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/searchopen"/>
+            <Button
+                android:id="@+id/btn_orderingroom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:background="@color/PColor2"
+                style="?borderlessButtonStyle"
+                android:text="거리순"><!--거리순 최신순(기본)-->
+            </Button>
+        </LinearLayout>
+
+        <com.naver.maps.map.MapView
+            android:id="@+id/mv_naver"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
 
         <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
             android:scrollbarFadeDuration="0"
             android:scrollbarSize="5dp"
             android:scrollbarThumbVertical="@android:color/darker_gray"
             android:scrollbars="vertical">
-
         </androidx.recyclerview.widget.RecyclerView>
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_create"
-        android:layout_width="wrap_content"
+
+    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="생성"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical"
+        android:gravity="bottom">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:hint="채팅방 돌아가기"
+            android:background="@color/PColor1"
+            android:gravity="center"
+            android:textSize="20dp">
+
+        </Button>
+    </LinearLayout>
+    -->
+
+    <include
+        layout="@layout/create_button"/>
+</androidx.drawerlayout.widget.DrawerLayout>
