--- a/app/src/main/res/layout/restaurant_list.xml
+++ b/app/src/main/res/layout/restaurant_list.xml
@@ -1,12 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_restaurant"
+    android:layout_height="?actionBarSize"
+    android:orientation="horizontal"
+    android:background="@color/background"
+    android:padding="5dp"
+    android:weightSum="1">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"/>
-
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_gravity="center"
+            android:layout_weight="0.25"
+            android:background="@color/white"
+            android:gravity="left">
+                <TextView
+                    android:id="@+id/tv_restaurant"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:background="@color/white"
+                    android:ellipsize="end"
+                    android:text="음식점 이름"
+                    android:textSize="20dp"
+                    android:textColor="@color/black"
+                    android:maxLength="12"/>
+        </LinearLayout>
+        <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_gravity="center"
+            android:layout_weight="0.4"
+            android:background="@color/white"
+            android:gravity="center">
+                <TextView
+                    android:id="@+id/tv_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/white"
+                    android:padding="2dp"
+                    android:text="672m"
+                    android:textSize="16dp"
+                    android:textColor="@color/black"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:layout_weight="0.35"
+            android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="2dp"
+                    android:text="16:00~20:00"
+                    android:textSize="16dp"
+                    android:textColor="@color/black"/>
+        </LinearLayout>
+        -->
 </LinearLayout>
