--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -14,7 +14,8 @@
             android:id="@+id/tv_roomName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:textColor="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,21 +29,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:textSize="20dp"
-                android:layout_weight="0.3"/>
+                android:layout_weight="0.3"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/tv_food"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:textSize="20dp"
-                android:layout_weight="0.3"/>
+                android:layout_weight="0.3"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/tv_restaurant"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:textSize="20dp"
-                android:layout_weight="0.3"/>
+                android:layout_weight="0.3"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
