--- a/app/src/main/res/layout/other_text_view.xml
+++ b/app/src/main/res/layout/other_text_view.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    >
-
-    <TextView
-        android:id="@+id/tvChat"
-        android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="left"
+    android:padding="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/chat_bubble"
-        android:padding="10dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="5dp"
-        />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:gravity="left"
+        android:layout_weight="0.2">
+        <ImageView
+            android:id="@+id/iv_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginRight="6dp"
+            android:background="@drawable/profile1"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이름"/>
+            <TextView
+                android:id="@+id/tvChat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/shape3"
+                android:padding="10dp"
+                android:text="상대가 쓴 채팅 예시입니다."
+                android:textSize="11sp"
+                android:textColor="@color/black"></TextView>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.8">
+    </LinearLayout>
+</LinearLayout>
