--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -1,129 +1,278 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
-
-    <FrameLayout
-        android:id="@+id/fl_empty"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        app:layout_constraintTop_toTopOf="parent"></FrameLayout>
-
-    <EditText
-        android:id="@+id/et_roomName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="방제를 입력하세요."
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/fl_empty" />
+    android:background="@color/white">
 
     <LinearLayout
-        android:id="@+id/ll_input"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        app:layout_constraintTop_toBottomOf="@+id/et_roomName">
-
-        <Spinner
-            android:id="@+id/spinner1"
-            android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            layout="@layout/toolbar"/>
+        <!--상단고정알림-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:gravity="center"
+            android:background="@color/PColor2">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="대기열 생성"
+                android:textSize="28dp">
+            </TextView>
+        </LinearLayout>
+        <!--방제목-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spinnerMode="dropdown"
-            android:background="@drawable/spinner_background"
-            android:layout_weight="0.25"
-            />
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="120dp"
-            android:background="@drawable/spinner_background"
-            android:spinnerMode="dropdown"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="방제목"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+            <EditText
+                android:id="@+id/et_roomName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape3"
+                android:hint="밥친구에게 보여줄 제목을 입력하세요."
+                android:maxLength="24"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="14sp"
+                android:padding="8dp">
+            </EditText>
+        </LinearLayout>
+        <!--방 설정하기-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25" />
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="방 설정하기"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.2"
+                            android:layout_marginRight="5dp"
+                            android:orientation="vertical"
+                            android:weightSum="1">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="종류"
+                                android:textColor="@color/black"
+                                android:textSize="14dp"></TextView>
+                            <Spinner
+                                android:id="@+id/spinner1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:spinnerMode="dropdown"
+                                android:layout_weight="1"
+                                android:background="@drawable/spinner_background">
+                            </Spinner>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.17"
+                            android:gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:orientation="vertical"
+                            android:weightSum="1">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="음식명"
+                                android:textColor="@color/black"
+                                android:textSize="14dp"></TextView>
+                            <Spinner
+                                android:id="@+id/spinner2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:spinnerMode="dropdown"
+                                android:layout_weight="1"
+                                android:background="@drawable/spinner_background"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.12"
+                            android:gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:orientation="vertical"
+                            android:weightSum="1">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="음식점"
+                                android:textColor="@color/black"
+                                android:textSize="14dp"></TextView>
+                            <Spinner
+                                android:id="@+id/spinner3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:spinnerMode="dropdown"
+                                android:layout_weight="1"
+                                android:background="@drawable/spinner_background">
+                            </Spinner>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/black"
+                    android:backgroundTint="#44000000">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_margin="10dp">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <ImageButton
+                                android:id="@+id/ib_enter"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:background="@drawable/tagplus">
+                            </ImageButton>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="태그추가"
+                                android:textSize="12sp">
+                            </TextView>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="6dp"
+                            android:orientation="vertical">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="2dp"
+                                android:layout_weight="0.1">
 
-        <Spinner
-            android:id="@+id/spinner3"
-            android:layout_width="120dp"
-            android:background="@drawable/spinner_background"
-            android:spinnerMode="dropdown"
+                                <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/rv_tag"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:scrollbarFadeDuration="0"
+                                    android:scrollbarSize="5dp"
+                                    android:scrollbarThumbVertical="@android:color/darker_gray"
+                                    android:scrollbars="horizontal">
+                                </androidx.recyclerview.widget.RecyclerView>
+                            </LinearLayout>
+                            <EditText
+                                android:id="@+id/et_tag"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.1"
+                                android:layout_marginTop="2dp"
+                                android:paddingLeft="6dp"
+                                android:background="@drawable/shape6"
+                                android:hint="태그를 입력하세요."
+                                android:textSize="12sp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/black">
+                            </EditText>
+                        </LinearLayout>
+                    </LinearLayout>
+                </FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <!--지도보기-->
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25" />
-
-        <Button
-            android:id="@+id/btn_map"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="입력"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_tag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_input">
-
-        <EditText
-            android:id="@+id/et_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.9"
-            android:hint="태그를 입력하세요."
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"/>
-
-        <Button
-            android:id="@+id/btn_enter"
-            android:layout_width="40dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:shadowColor="@color/black"
+            android:shadowDx="-7.0"
+            android:shadowDy="7.0"
+            android:text="지도보기"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:text="입력" />
+            android:orientation="vertical">
 
+            <com.naver.maps.map.MapView
+                android:id="@+id/mv_naver"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"/>
+
+            <ImageView
+                android:id="@+id/iv_map"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="20dp"
+                android:layout_gravity="right"
+                android:src="@drawable/location">
+            </ImageView>
+
+        </FrameLayout>
+        <!--등록하기-->
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/shape3"
+            android:backgroundTint="@color/PColor2"
+            android:text="등록하기"
+            android:textSize="36dp"
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+        </Button>
     </LinearLayout>
-
-    <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_tag"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:scrollbarFadeDuration="0"
-        android:scrollbarSize="5dp"
-        android:scrollbarThumbVertical="@android:color/darker_gray"
-        android:scrollbars="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_tag">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <com.naver.maps.map.MapView
-        android:id="@+id/mv_naver"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_tag" />
-
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="등록"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
+</androidx.drawerlayout.widget.DrawerLayout>
