--- a/app/src/main/res/layout/all_text_view.xml
+++ b/app/src/main/res/layout/all_text_view.xml
@@ -12,9 +12,10 @@
         android:padding="10dp"
         android:gravity="center"
         android:text="전종훈님이 입장하셨습니다."
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
