--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -2,73 +2,140 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:layout_margin="10dp"
+    android:padding="10dp"
+    android:background="@drawable/shape3"
+    android:orientation="horizontal">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.7"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+        <ImageView
+            android:id="@+id/iv_food"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/food1"><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
+        </ImageView>
+        <TextView
+            android:id="@+id/tv_food"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="존마탱"
+            android:textColor="@color/white"
+            android:textSize="20sp">
+        </TextView>
+    </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_roomName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:textColor="@color/black"/>
-
+        android:orientation="vertical"
+        android:layout_gravity="top"
+        android:layout_weight="0.3"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="6dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="0.9"
-            >
-
-            <TextView
-                android:id="@+id/tv_userId"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape2"
+            android:orientation="horizontal">
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textSize="20dp"
-                android:layout_weight="0.3"
+                android:layout_height="wrap_content"
+                android:gravity="left">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="제목"
+                    android:textSize="12sp"
+                    android:padding="2dp"
+                    android:background="@color/PColor2">
+                </TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start">
+                <TextView
+                    android:id="@+id/tv_roomName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="이 씨발련들아 밥먹자우라라라라라랄ㄹ"
+                    android:maxLength="14"
+                    android:layout_marginLeft="4dp"
+                    android:textSize="12sp"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp">
+                </TextView>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape2"
+            android:gravity="center">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="식당명"
+                    android:textSize="12sp"
+                    android:padding="2dp"
+                    android:background="@color/PColor2">
+                </TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start">
+                <TextView
+                    android:id="@+id/tv_restaurant"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="맛있는맛있는맛있는녀석들전부모여라시발"
+                    android:maxLength="12"
+                    android:layout_marginLeft="4dp"
+                    android:textSize="12sp"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp">
+                </TextView>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="6dp"
+            android:background="@drawable/shape2">
+            <TextView
+                android:id="@+id/tv_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/chat_bubble"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:textSize="12sp"
                 android:textColor="@color/black"/>
 
-            <TextView
-                android:id="@+id/tv_food"
+            <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_tag"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textSize="20dp"
-                android:layout_weight="0.3"
-                android:textColor="@color/black"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:scrollbarFadeDuration="0"
+                android:scrollbarSize="5dp"
+                android:scrollbarThumbVertical="@android:color/darker_gray"
+                android:scrollbars="horizontal">
 
-            <TextView
-                android:id="@+id/tv_restaurant"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textSize="20dp"
-                android:layout_weight="0.3"
-                android:textColor="@color/black"/>
+            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
-
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:scrollbarFadeDuration="0"
-            android:scrollbarSize="5dp"
-            android:scrollbarThumbVertical="@android:color/darker_gray"
-            android:scrollbars="horizontal">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </LinearLayout>
-
 </LinearLayout>
