프로필 편집 레이아웃 수정, 채팅 레이아웃 및 기능 수정, 갤러리 접근권한 요청 추가

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -20,7 +20,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="CAMPUS\nTAURANT"
-                android:textSize="80dp"
+                android:textSize="70sp"
                 android:letterSpacing="0.1"
                 android:textColor="@color/white"></TextView>
             <LinearLayout
