--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="right"
     android:padding="4dp">
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.2"
         android:gravity="right"
-        android:layout_weight="0.2">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="이름"/>
+
             <TextView
                 android:id="@+id/tvChat"
                 android:layout_width="wrap_content"
@@ -27,16 +28,9 @@
                 android:layout_gravity="center"
                 android:background="@drawable/shape3"
                 android:padding="10dp"
-                android:text="상대가 쓴 채팅 예시입니다."
-                android:textSize="11sp"
-                android:textColor="@color/black"></TextView>
+                android:text="내가 쓴 채팅 예시입니다."
+                android:textColor="@color/black"
+                android:textSize="11sp"></TextView>
         </LinearLayout>
     </LinearLayout>
-    <ImageView
-        android:id="@+id/iv_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginLeft="6dp"
-        android:background="@drawable/profile1"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
