--- a/app/src/main/res/layout/other_text_view.xml
+++ b/app/src/main/res/layout/other_text_view.xml
@@ -13,10 +13,9 @@
         <ImageView
             android:id="@+id/iv_profile"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:layout_marginRight="6dp"
-            android:background="@drawable/profile1"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
+            android:layout_marginRight="6dp"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -24,8 +23,7 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="이름"/>
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tvChat"
                 android:layout_width="wrap_content"
