--- a/app/src/main/res/layout/sidebar_view.xml
+++ b/app/src/main/res/layout/sidebar_view.xml
@@ -55,7 +55,7 @@
                     android:layout_weight="0.06">
                 </LinearLayout>
                 <ImageButton
-                    android:id="@+id/btn_setprofile"
+                    android:id="@+id/btn_setting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.1"
@@ -194,30 +194,6 @@
                             android:textColor="@color/black"
                             android:textSize="14sp"></TextView>
                     </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_weight="0.1"
-                        android:layout_gravity="center">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="나이 : "
-                            android:textSize="14sp"
-                            android:textColor="@color/black">
-                        </TextView>
-                        <TextView
-                            android:id="@+id/tv_old"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text=""
-                            android:textSize="14sp"
-                            android:textColor="@color/black">
-                        </TextView>
-                    </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -243,12 +219,13 @@
                     android:layout_marginRight="10dp"
                     android:background="@drawable/shape3">
                     <TextView
+                        android:id="@+id/tv_introduce"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:text="아 시발 전종훈 머하냐"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/black">
                     </TextView>
                 </LinearLayout>
