매칭 기능 수정(대기방 하나만 참여가능)

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -231,6 +231,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:gravity="center"
+                            android:maxLines="1"
                             android:textSize="10sp"
                             android:textColor="@color/black">
                         </EditText>
