--- a/app/src/main/res/layout/other_text_view.xml
+++ b/app/src/main/res/layout/other_text_view.xml
@@ -12,10 +12,11 @@
         android:layout_weight="0.2">
         <ImageView
             android:id="@+id/iv_profile"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:layout_marginRight="6dp"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
+            android:layout_marginRight="6dp"
+            android:scaleType="centerInside"/><!--둥글게 : java파일 roomfoodpic.clipToOutline = true추가-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -23,7 +24,8 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/tvChat"
                 android:layout_width="wrap_content"
